<resources>
    <string name="app_name">Crud Sqlite</string>

    <!--Text Apps-->
    <string name="create_data">Create Data</string>
    <string name="update_data">Update Data</string>
    <string name="delete_data">Delete Data</string>
    <string name="read_data">Read Data</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="classes">Class</string>
    <string name="enter_id">Please enter your ID</string>
    <string name="myname">Muhamad Syafii</string>
    <string name="email_me">muhamadsyafii4@gmail.com</string>
</resources>
